<resources>
    <string name="app_name">Swoosh</string>
    <string name="desired_league">Desired League</string>
    <string name="todo">TODO</string>
    <string name="mens">Mens</string>
    <string name="womans">Womans</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">next</string>
    <string name="image_background">image background</string>
    <string name="app_logo">app logo</string>
    <string name="go_all_in">go all in</string>
    <string name="on_going_in_out">on going in out</string>
    <string name="find_your_team_in_your_city_amp_dominate_the_league"><![CDATA[Find your team in your city & dominate the league]]></string>
    <string name="get_started">get started</string>
    <string name="skill_image">skill image</string>
    <string name="i_am_a">I am a</string>
    <string name="beginer">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
</resources>
